--- a/css/Style.css
+++ b/css/Style.css
@@ -46,13 +46,16 @@ nav p {
     z-index: 0;
     width: 100%;  
     margin-bottom: 10px;
+    border:2px solid lightgreen;
 }
 
 .fb-image-profile
 {
     margin: -90px 10px 0px 50px;
     z-index: 9;
-    width: 20%; 
+    width: 20%;
+    border-radius:50%;
+    border:2px solid lightgreen; 
 }
 
 @media (max-width:768px)
