--- a/MasterLogSemAnuncio.master
+++ b/MasterLogSemAnuncio.master
@@ -31,7 +31,7 @@
        <div class="wrapper">
             <nav id="sidebar" runat="server">
                 <div id="header" class="sidebar-header" runat="server">
-                    <asp:Image ID="imgPerfil" runat="server" Width="100px" Height="80px" CssClass="rounded-circle"/>
+                    <asp:Image ID="imgPerfil" runat="server" Width="80px" Height="80px" CssClass="rounded-circle"/>
                     <asp:Label ID="lblPname" runat="server" Text="Nome do Usuario" Font-Size="20px"></asp:Label>
                     <a href="Perfil.aspx" class="nav-link btn btn-outline-light btn-sm">Ver Perfil</a>
                 </div>
@@ -59,7 +59,7 @@
                 <ul class ="nav navbar-nav ml-auto">
                     <li class="nav-item">
                         <a href="HomeLog.aspx" class="nav-link">
-                            <asp:Image ID="Image1" runat="server" CssClass="navbar-nav" ImageUrl="~/Images/homeIcon.png" Width="40px" Height="40px" />
+                            <asp:Image ID="Image1" runat="server" CssClass="navbar-nav" ImageUrl="~/Images/homeIcon.png" Width="40px" Height="40px" Title="Página Inicial"/>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -69,7 +69,7 @@
                         <asp:Image ID="imgFC" runat="server" CssClass="navbar-nav" ImageUrl="~/Images/fale_Conosco.png" Width="40px" Height="40px"  Title="Fale Conosco Via Chat"/>
                         </a></li>
                     <li class="nav-item">
-                        <asp:ImageButton ID="imgLogOff" runat="server" ImageUrl="~/Images/logOff.png" OnClick="imgLogOff_Click" Width="40px" Height="40px"/>
+                        <asp:ImageButton ID="imgLogOff" runat="server" ImageUrl="~/Images/logOff.png" OnClick="imgLogOff_Click" Width="40px" Height="40px" Title="Sair"/>
                     </li>
                     </ul>
                 </nav>
