--- a/Master Inicial.master
+++ b/Master Inicial.master
@@ -12,9 +12,19 @@
     <meta name="viewport" content="width = device-width, intial-scale = 1"/>
     <script src="JQ/jquery-3.4.1.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/Style.css"/>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/Script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet"/> 
+    <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet"/> 
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet"/> 
+    <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet"/>   
+    <script src="https://kit.fontawesome.com/a6170f5955.js" crossorigin="anonymous"></script>
     <style>
         .jumbotron{
             background-color: cornflowerblue;
