--- a/MasterLog.master
+++ b/MasterLog.master
@@ -12,10 +12,8 @@
     <meta name="viewport" content="width = device-width, intial-scale = 1"/>
     <script src="JQ/jquery-3.4.1.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/MyStyle.css"/>
     <link rel="stylesheet" type="text/css" href="css/Style.css"/>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/Script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet"/> 
     <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet"/>
@@ -25,7 +23,8 @@
     <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Pinyon+Script&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet"/>      
+    <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie&display=swap" rel="stylesheet"/> 
+    <script src="https://kit.fontawesome.com/a6170f5955.js" crossorigin="anonymous"></script>     
 </head>
 <body>
     <form id="form1" runat="server">
@@ -43,15 +42,8 @@
                 </p>
                 <div id="lstAmigos" runat="server">
                 </div>
-                <ul class="list-unstyled components" id="SolicitacoesRecebidas" runat="server">
-                      
-                </ul>
-                <ul class="list-unstyled components" id="friendlist" runat="server">
-                      
-                </ul>
-                <ul class="list-unstyled components" id="SolicitacoesEnviadas" runat="server">
-                      
-                </ul>
+                <div id="sltAmigos" runat="server">
+                </div>
                 
             </nav>
         
